kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dec112-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dec112
  template:
    metadata:
      labels:
        app: dec112
    spec:
      containers:
      - name: dec112
        image: semcon/sc-dec112
        command: ["init.sh"]
        args: ["$(SC_INIT)"]
        ports:
        - containerPort: 3000
