kube/service.yml
kind: Service
apiVersion: v1
metadata:
  name: dec112-service
spec:
  selector:
    app: dec112
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
