kube/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dec112-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dec112.data-container.net
    secretName: letsencrypt-dec112
  rules:
  - host: dec112.data-container.net
    http:
      paths:
      - path: /
        backend:
          serviceName: dec112-service
          servicePort: 80
